--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/thumbnail1"
+        android:background="@drawable/thumbnail1"
         app:layout_constraintEnd_toStartOf="@+id/memberIB2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
@@ -135,6 +135,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/pic3"
         app:layout_constraintEnd_toEndOf="@+id/memberIB1"
         app:layout_constraintStart_toStartOf="@+id/memberIB1"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
