--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -7,10 +7,12 @@
     android:background="@color/white"
     tools:context=".IntroduceActivity">
 
-    <include
-        layout = "@layout/toolbar"
-        android:id = "@+id/team_toolbar"/>
 
+    <include
+        android:id="@+id/team_toolbar"
+        layout="@layout/toolbar"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="1dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
