--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="23dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
+        app:layout_constraintBottom_toTopOf="@+id/memberIB2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -71,7 +71,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/teamIB"
         android:layout_width="260dp"
         android:layout_height="150dp"
         android:layout_marginTop="50dp"
@@ -88,15 +88,15 @@
         android:text="I(1조) 팀의 소개"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />
+        app:layout_constraintTop_toBottomOf="@+id/teamIB" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/memberIB1"
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:src="@drawable/ok"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/memberIB2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -106,9 +106,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김재현"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+        app:layout_constraintEnd_toEndOf="@+id/memberIB1"
+        app:layout_constraintStart_toStartOf="@+id/memberIB1"
+        app:layout_constraintTop_toBottomOf="@+id/memberIB1" />
 
     <TextView
         android:id="@+id/textView5"
@@ -120,13 +120,13 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/memberIB2"
         android:layout_width="135dp"
         android:layout_height="0dp"
         android:layout_marginBottom="293dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintStart_toEndOf="@+id/memberIB1"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -135,9 +135,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김재혁"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="@+id/imageButton2"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintEnd_toEndOf="@+id/memberIB2"
+        app:layout_constraintStart_toStartOf="@+id/memberIB2"
+        app:layout_constraintTop_toBottomOf="@+id/memberIB2" />
 
     <TextView
         android:id="@+id/textView6"
@@ -149,12 +149,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/memberIB3"
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton"
-        app:layout_constraintStart_toStartOf="@+id/imageButton"
+        app:layout_constraintEnd_toEndOf="@+id/memberIB1"
+        app:layout_constraintStart_toStartOf="@+id/memberIB1"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -163,9 +163,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김재혁"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/imageButton3"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+        app:layout_constraintEnd_toEndOf="@+id/memberIB3"
+        app:layout_constraintStart_toStartOf="@+id/memberIB3"
+        app:layout_constraintTop_toBottomOf="@+id/memberIB3" />
 
     <TextView
         android:id="@+id/textView8"
@@ -177,12 +177,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/memberIB4"
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toEndOf="@+id/memberIB2"
+        app:layout_constraintStart_toStartOf="@+id/memberIB2"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -191,9 +191,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="김재혁"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
-        app:layout_constraintStart_toStartOf="@+id/imageButton4"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
+        app:layout_constraintEnd_toEndOf="@+id/memberIB4"
+        app:layout_constraintStart_toStartOf="@+id/memberIB4"
+        app:layout_constraintTop_toBottomOf="@+id/memberIB4" />
 
     <TextView
         android:id="@+id/textView9"
