--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -20,8 +20,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/people"
-        android:background="@color/white"
+        android:background="@drawable/people"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/personal_toolbar" />
 
