--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
     tools:context=".MainActivity">
 
 
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/main_toolbar" />
+
     <TextView
         android:id="@+id/teamName"
         android:layout_width="wrap_content"
