--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
 
 
     <TextView
+
         android:id="@+id/teamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/teamIntroduce"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
@@ -32,9 +34,11 @@
 
     <ImageButton
         android:id="@+id/teamIB"
-        android:layout_width="260dp"
-        android:layout_height="150dp"
+        android:layout_width="380dp"
+        android:layout_height="170dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I(1조) 팀의 소개"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teamIB" />
@@ -52,7 +57,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="팀원 소개"
+        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.039"
@@ -62,8 +71,9 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="3dp"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="400dp"
         android:background="#A5A5A5"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -77,9 +87,9 @@
         android:id="@+id/memberIB1"
         android:layout_width="135dp"
         android:layout_height="150dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/thumbnail1"
-        app:layout_constraintEnd_toStartOf="@+id/memberIB2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -89,28 +99,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name1"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/memberIB1"
         app:layout_constraintStart_toStartOf="@+id/memberIB1"
-        app:layout_constraintTop_toBottomOf="@+id/memberIB1" />
+        app:layout_constraintTop_toBottomOf="@+id/memberIB1"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="970802/ISTJ/대구"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="TextSizeCheck" />
 
     <ImageButton
         android:id="@+id/memberIB2"
         android:layout_width="135dp"
         android:layout_height="150dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/pic2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/memberIB1"
-        app:layout_constraintTop_toBottomOf="@+id/view"
+        app:layout_constraintTop_toTopOf="@+id/memberIB1"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -118,18 +135,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name2"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/memberIB2"
         app:layout_constraintStart_toStartOf="@+id/memberIB2"
-        app:layout_constraintTop_toBottomOf="@+id/memberIB2" />
+        app:layout_constraintTop_toBottomOf="@+id/memberIB2"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="000000/MBTI/지역"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:ignore="TextSizeCheck" />
 
     <ImageButton
         android:id="@+id/memberIB3"
@@ -147,18 +170,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name3"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/memberIB3"
         app:layout_constraintStart_toStartOf="@+id/memberIB3"
-        app:layout_constraintTop_toBottomOf="@+id/memberIB3" />
+        app:layout_constraintTop_toBottomOf="@+id/memberIB3"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="000000/MBTI/지역"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="TextSizeCheck" />
 
     <ImageButton
         android:id="@+id/memberIB4"
@@ -176,18 +205,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name4"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/memberIB4"
         app:layout_constraintStart_toStartOf="@+id/memberIB4"
-        app:layout_constraintTop_toBottomOf="@+id/memberIB4" />
+        app:layout_constraintTop_toBottomOf="@+id/memberIB4"
+        tools:ignore="TextSizeCheck" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="980118/INFP/경북"
+        android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="TextSizeCheck" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
