--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:text="@string/teamIntroduce"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -44,7 +44,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:importantForAccessibility="no"
-        android:src="@drawable/dd"
+        android:src="@drawable/pic99"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
