--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
         android:layout_marginStart="10dp"
         android:text="팀원 소개"
         android:textSize="18dp"
-        android:textColor="@color/white"
+        android:textColor="@color/theme_text_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
