--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/theme_layout_color"
     tools:context=".PersonalActivity">
 
 
@@ -21,7 +21,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:src="@drawable/people"
-        android:background="@color/white"
+        android:background="@color/theme_layout_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/personal_toolbar"/>
 
