--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/toolbar"
@@ -8,21 +7,22 @@
     android:layout_height="30dp"
     android:background="@color/grey"
     android:elevation="4dp"
-    app:contentInsetStart="15dp"
-    app:contentInsetEnd="11dp">
+    app:contentInsetEnd="11dp"
+    app:contentInsetStart="15dp">
+
     <ImageView
+        android:id="@+id/menu_btn"
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_menu"
-        android:id="@+id/menu_btn"
-        />
+        android:src="@drawable/ic_menu" />
+
     <ImageView
         android:id="@+id/return_btn"
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_return"
-        android:contentDescription="@string/back_button"
         android:layout_gravity="end"
-        android:visibility="gone"
-        />
+        android:contentDescription="@string/back_button"
+        android:src="@drawable/ic_return"
+        android:visibility="gone" />
+
 </androidx.appcompat.widget.Toolbar>
