--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,10 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="Theme.AppCompat.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/theme_layout_color</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/icon_i</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.Kotlin_ot_project_I</item>
+    </style>
 </resources>
