--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,7 +159,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/main_img3"
+        android:background="@drawable/thumbnail3"
         app:layout_constraintEnd_toEndOf="@+id/memberIB1"
         app:layout_constraintStart_toStartOf="@+id/memberIB1"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
