--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,16 @@
     tools:context=".MainActivity">
 
     <include
-        layout="@layout/toolbar"
-        android:id="@+id/main_toolbar"/>
+        android:id="@+id/main_toolbar"
+        layout="@layout/toolbar" />
+
     <TextView
         android:id="@+id/teamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/teamIntroduce"
-        android:textSize="18sp"
         android:textColor="@color/theme_text_color"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,15 +36,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teamName" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/teamIB"
-        android:src="@drawable/pic99"
-        android:layout_width="380dp"
-        android:scaleType="fitXY"
+        android:layout_width="wrap_content"
         android:layout_height="170dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
+        android:paddingStart="15dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="15dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/pic99"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/view2"
@@ -224,9 +225,6 @@
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:ignore="TextSizeCheck" />
-
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
