--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -42,6 +42,7 @@
         android:layout_height="200dp"
 
         android:layout_gravity="center"
+        android:scaleType="fitXY"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="15dp"
